--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,17 @@
 
 
 
-    <color name="getPrimary">@color/material_cyan500</color>
-    <color name="getPrimaryDark">@color/material_cyan800</color>
-    <color name="payPrimary">@color/material_orange400a</color>
+
+
+
+
+    <color name="getPrimary">@color/material_green600</color>
+    <color name="payPrimary">@color/material_deeporange700</color>
+    <color name="zeroPrimary">@color/material_grey600</color>
+
+
+
+    <color name="getPrimaryDark">@color/material_green800</color>
     <color name="payPrimaryDark">@color/material_orange700a</color>
 
 
@@ -482,6 +490,8 @@
 
 
     <color name="material_green500">#4CAF50</color>
+    <color name="material_green600">#43A047</color>
+
     <color name="material_green800">#2E7D32</color>
 
     <color name="material_green400a">#00E676</color>
@@ -520,6 +530,9 @@
     <color name="material_orange700a">#FF6D00</color>
 
     <color name="material_deeporange500">#FF5722</color>
+    <color name="material_deeporange600">#F4511E</color>
+    <color name="material_deeporange700">#E64A19</color>
+
     <color name="material_deeporange800">#D84315</color>
 
     <color name="material_deeporange400a">#FF3D00</color>
@@ -530,6 +543,8 @@
     <color name="material_brown800">#4E342E</color>
 
     <color name="material_grey500">#9E9E9E</color>
+    <color name="material_grey600">#757575</color>
+
     <color name="material_grey800">#424242</color>
 
     <color name="material_bluegrey500">#607D8B</color>
