--- a/app/src/main/res/drawable/bg_login.xml
+++ b/app/src/main/res/drawable/bg_login.xml
@@ -14,7 +14,7 @@
     </item>
 
 </layer-list>
-
+<!--Farhan Masood-->
 <!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">-->
 
     <!--<item android:drawable="@drawable/side_nav_bar"/>-->
